fix(proxy): fix script/function/tfunction command (#409)